<resources>
    <!-- Common -->
    <string name="app_name" translatable="false">Movie App</string>
    <string name="search_hint">Search</string>
    <string name="read_more">Read More</string>
    <string name="read_less">Read Less</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="button_title" translatable="false">Button Title</string>

    <!-- Onboarding Fragment -->
    <string name="onboarding_fragment_content_description_background_image">Background Image</string>
    <string name="onboarding_fragment_content_description_background_shadow">Background Image Shadow</string>
    <string name="onboarding_fragment_text_button_get_started">Get Started</string>

    <!-- Home Auth Fragment -->
    <string name="home_auth_fragment_content_description_cover">Screen Cover</string>
    <string name="home_auth_fragment_content_description_ic_facebook">Facebook Icon</string>
    <string name="home_auth_fragment_content_description_ic_google">Google Icon</string>
    <string name="home_auth_fragment_title">Login with…</string>
    <string name="home_auth_fragment_text_button_continue_with_facebook">Facebook</string>
    <string name="home_auth_fragment_text_button_continue_with_google">Google</string>
    <string name="home_auth_fragment_text_social_or_password">or</string>
    <string name="home_auth_fragment_text_button_sign_in_with_password">Loggin with account</string>
    <string name="home_auth_fragment_text_dont_have_an_account">Don\'t have an account?</string>
    <string name="home_auth_fragment_text_sign_up">Subscribe</string>

    <!-- Sign Up Fragment -->
    <string name="sign_up_fragment_content_description_logo">App Logo</string>
    <string name="sign_up_fragment_content_description_ic_google">Google Icon</string>
    <string name="sign_up_fragment_content_description_ic_facebook">Facebook Icon</string>
    <string name="sign_up_fragment_title">Create your account</string>
    <string name="sign_up_fragment_text_hint_edit_email">Email</string>
    <string name="sign_up_fragment_text_hint_edit_password">Password</string>
    <string name="sign_up_fragment_text_button_sign_up">Sign Up</string>
    <string name="sign_up_fragment_text_continue_social_network">or continue with</string>
    <string name="sign_up_fragment_text_already_account">Already have an account?</string>
    <string name="sign_up_fragment_text_button_sign_in">Sign In</string>

    <!-- Sign In Fragment -->
    <string name="sign_in_fragment_content_description_logo">App Logo</string>
    <string name="sign_in_fragment_content_description_ic_google">Google Icon</string>
    <string name="sign_in_fragment_content_description_ic_facebook">Facebook Icon</string>
    <string name="sign_in_fragment_title">Sign in with your account</string>
    <string name="sign_in_fragment_text_hint_edit_email">Email</string>
    <string name="sign_in_fragment_text_hint_edit_password">Password</string>
    <string name="sign_in_fragment_text_button_sign_in">Sign In</string>
    <string name="sign_in_fragment_text_forgot_password">Forgot passowrd?</string>
    <string name="sign_in_fragment_text_continue_social_network">or continue with</string>
    <string name="sign_in_fragment_text_dont_have_an_account">Don\'t have an account?</string>
    <string name="sign_in_fragment_text_sign_up">Subscribe</string>

    <!-- Forgot Password Fragment -->
    <string name="forgot_password_fragment_title">Create a new password</string>
    <string name="forgot_password_fragment_text_hint_edit_email">Email</string>
    <string name="forgot_password_fragment_text_button_forgot">Retrieve account</string>
    <string name="forgot_password_fragment_email_recovery_sent">Recovery email sent successfully</string>

    <!-- Genre Item Fragment -->
    <string name="genre_item_show_all">Show All</string>

    <!-- Movie Detail Fragment -->
    <string name="movie_details_parental_rating_adult">18+</string>
    <string name="movie_details_parental_rating_general">General Public</string>
    <string name="movie_details_button_play" translatable="false">Play</string>
    <string name="movie_details_content_description_button_play">Play Button</string>
    <string name="movie_details_button_download" translatable="false">Download</string>
    <string name="movie_details_content_description_button_download">Download Button</string>
    <string name="movie_details_genres">Genres</string>
    <string name="movie_details_overview_link_expand">View More</string>
    <string name="movie_details_overview_link_collapse">Show Less</string>

    <!-- Movie Trailer Fragment -->
    <string name="movie_trailer_tab_layout_title" translatable="false">Trailers</string>

    <!-- Similar Movies Fragment -->
    <string name="similar_movies_tab_layout_title">Similar Movies</string>

    <!-- Movie Reviews Fragment -->
    <string name="movie_reviews_tab_layout_title">Comments</string>
    <string name="movie_reviews_sufix_days_ago">days ago</string>

    <!-- Bottom Bar Menu -->
    <string name="bottom_bar_title_menu_home">Home</string>
    <string name="bottom_bar_title_menu_search">Search</string>
    <string name="bottom_bar_title_menu_favorite">Favorite</string>
    <string name="bottom_bar_title_menu_download">Download</string>
    <string name="bottom_bar_title_menu_profile">Profile</string>

    <!-- Generic Validations -->
    <string name="text_validation_name_empty">Type your name</string>
    <string name="text_validation_email_empty">Type your email</string>
    <string name="text_validation_email_invalid">Enter a valid email</string>
    <string name="text_validation_phone_empty">Type your phone</string>
    <string name="text_validation_phone_invalid">Enter a valid phone number</string>
    <string name="text_validation_password_empty">Type your password</string>
    <string name="text_validation_password_invalid">Enter a valid password</string>
    <string name="text_validation_generic_error">An error occurred, please try again later</string>
    <string name="text_validation_formated_value">$ %1$s</string>

    <!-- Firebase Authentication Erros -->
    <string name="firebase_auth_error_account_not_registered">No accounts found with this email</string>
    <string name="firebase_auth_error_invalid_email">Enter a valid email</string>
    <string name="firebase_auth_error_invalid_password">Invalid password, try again</string>
    <string name="firebase_auth_error_email_in_use">This email is already in use</string>
    <string name="firebase_auth_error_strong_password">Enter a stronger password</string>
</resources>