<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/forgot_password_scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".presentation.view.fragment.auth.ForgotPasswordFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/forgot_password_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/forgot_password_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/forgot_password_wrapper"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingHorizontal="@dimen/padding_medium"
            android:paddingTop="@dimen/margin_extra_large"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forgot_password_toolbar">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/forgot_password_cover"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/forgot_passowrd_fragment_cover_height"
                android:src="@drawable/img_forgot_password"
                app:layout_constraintBaseline_toTopOf="@+id/forgot_password_wrapper"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/forgot_password_title"
                style="@style/CustomTextAppearance.TextHeadline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_extra_large"
                android:text="@string/forgot_password_fragment_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/forgot_password_cover" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/forgot_password_email"
                style="@style/CustomTextAppearance.EditText"
                android:layout_marginTop="@dimen/margin_extra_large"
                android:autofillHints="auto"
                android:drawableStart="@drawable/ic_email_outlined_gray"
                android:drawablePadding="@dimen/padding_small"
                android:hint="@string/forgot_password_fragment_text_hint_edit_email"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/forgot_password_title"
                tools:ignore="LabelFor" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/forgot_password_button_retrieve_account"
                style="@style/CustomTextAppearance.Button.Primary"
                android:layout_marginTop="@dimen/margin_medium"
                android:text="@string/forgot_password_fragment_text_button_forgot"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/forgot_password_email" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/forgot_password_progress_loading"
                android:layout_width="@dimen/loading_size"
                android:layout_height="@dimen/loading_size"
                android:layout_marginTop="@dimen/margin_large"
                android:src="@drawable/img_loading"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/forgot_password_button_retrieve_account"
                tools:visibility="visible" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>